# Agentic-pm-twin

./: .dockerignore  .env.example  Caddyfile  docker-compose.prod.yml  docker-compose.yml  tutorial.md
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml  deploy.yml  e2e.yml  live-integration.yml  secret-scan.yml
backend/: AGENTS.md  Dockerfile  pyproject.toml
backend/app/: board_templates.py  config.py  db.py  kanban.py  main.py
backend/app/repositories/: activity_repository.py  board_repository.py  chat_repository.py  comment_repository.py  user_repository.py
backend/app/services/: activity_service.py  ai_assistant_service.py  board_service.py  chat_service.py  comment_service.py  openai_service.py
backend/tests/: conftest.py  test_activity_api.py  test_ai_api.py  test_ai_assistant_service.py  test_ai_chat_api.py  test_auth.py  test_board_api.py  test_board_repository.py  test_board_schema.py  test_board_service.py  test_board_templates.py  test_chat_repository.py  test_comment_api.py  test_db_init.py  test_integration.py  test_labels.py  test_live_integration.py  test_openai_service.py  test_profile_api.py  test_registration.py  test_user_repository.py
docs/: branch-protection-checklist.md  code_review.md  live-integration-ci.md  security-secrets.md
frontend/: AGENTS.md  package-lock.json  package.json  playwright.config.ts  vitest.config.mts
frontend/.claude/: ralph-loop.local.md
frontend/src/components/: AISidebarChat.test.tsx  AISidebarChat.tsx  AuthGate.test.tsx  AuthGate.tsx  (+10 more)
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start.sh
(+3 files in other folders)
